Bug 82552 - segfault in libvcl when reopening presentation
Summary: segfault in libvcl when reopening presentation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0 target:4.3.3
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-13 10:30 UTC by Riccardo Magliocchetti
Modified: 2014-09-12 08:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (14.75 KB, text/plain)
2014-08-18 08:55 UTC, Riccardo Magliocchetti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Riccardo Magliocchetti 2014-08-13 10:30:35 UTC
How to reproduce:
- open GerritForLibreOffice.odp (from berlin conference 2012)
- press f5
- press esc
- press f5

[10211.342817] soffice.bin[4113]: segfault at 1c ip 00000000f5bf83fa sp 00000000fff5b79c error 4 in libvcllo.so[f59f8000+56d000]

I have two monitor connected and the second one is showing the presenter dashboard.
Comment 1 Robinson Tryon (qubit) 2014-08-17 02:16:12 UTC
TESTING with LO 4.3.1.1 + Ubuntu 12.04

(In reply to comment #0)
> How to reproduce:
> - open GerritForLibreOffice.odp (from berlin conference 2012)

I'm going to guess that this is the test document:
https://wiki.documentfoundation.org/File:GerritForLibreOffice.odp

(Next time, please attach the document to the bug report or point to its location in a permanent online repository, e.g. the TDF Wiki)

> - press f5
> - press esc
> - press f5

NO REPRO

I tried F5-esc-F5-esc, and then closed the document and tried again.

I also tried LO 4.3.0.3, with the same results.

> [10211.342817] soffice.bin[4113]: segfault at 1c ip 00000000f5bf83fa sp
> 00000000fff5b79c error 4 in libvcllo.so[f59f8000+56d000]
> 
> I have two monitor connected and the second one is showing the presenter
> dashboard.

That could possibly be related. What ODP were you using for testing? (The same one I linked to above?)
Comment 2 Riccardo Magliocchetti 2014-08-17 08:48:04 UTC
(In reply to comment #1)
> TESTING with LO 4.3.1.1 + Ubuntu 12.04
> 
> (In reply to comment #0)
> > How to reproduce:
> > - open GerritForLibreOffice.odp (from berlin conference 2012)
> 
> I'm going to guess that this is the test document:
> https://wiki.documentfoundation.org/File:GerritForLibreOffice.odp
> 
> (Next time, please attach the document to the bug report or point to its
> location in a permanent online repository, e.g. the TDF Wiki)

That's it but I don't think it's related to the file
 
> > - press f5
> > - press esc
> > - press f5
> 
> NO REPRO
> 
> I tried F5-esc-F5-esc, and then closed the document and tried again.
> 
> I also tried LO 4.3.0.3, with the same results.

Works fine without a second monitor attached to my laptop
 
> > [10211.342817] soffice.bin[4113]: segfault at 1c ip 00000000f5bf83fa sp
> > 00000000fff5b79c error 4 in libvcllo.so[f59f8000+56d000]
> > 
> > I have two monitor connected and the second one is showing the presenter
> > dashboard.
> 
> That could possibly be related. What ODP were you using for testing? (The
> same one I linked to above?)

Yes, looks like the second monitor is needed to reproduce so possibly a presenter dashboard issue.
Comment 3 Robinson Tryon (qubit) 2014-08-17 21:02:47 UTC
(In reply to comment #2)
> Yes, looks like the second monitor is needed to reproduce so possibly a
> presenter dashboard issue.

Sounds good. Let's try that.

TESTING with LO 4.3.1.1 + Ubuntu 12.04 (as I did before), as well as
LO 4.3.0.4

External monitor: Hooked up to laptop w/VGA-out.

(In reply to comment #0)
> How to reproduce:
> - open GerritForLibreOffice.odp from
>   https://wiki.documentfoundation.org/File:GerritForLibreOffice.odp
> - press f5
> - press esc
> - press f5

NO REPRO

Pressing F5 opened the presentation on one monitor and the Presenter Console on the other, but after cycling through F5-esc-F5-esc, as well as going forward/back through some slides, no segfault was seen.

Status -> RESOLVED WORKSFORME

Riccardo: Can you try to test with a different machine or using a GNU/Linux Live USB install?
I'd also suggest trying the 4.3.1 pre-release builds (see link at the bottom of the list of versions:
https://www.libreoffice.org/download/)

This might be something specific to your machine, but if you can reproduce it elsewhere, then we should dig deeper. If you can reproduce this problem with a separate machine/Live USB, then please change the bug status back to UNCONFIRMED.

Thanks!
Comment 4 Riccardo Magliocchetti 2014-08-18 08:55:56 UTC
Created attachment 104808 [details]
backtrace
Comment 5 Riccardo Magliocchetti 2014-08-18 09:05:03 UTC
(In reply to comment #3)
> NO REPRO
> 
> Pressing F5 opened the presentation on one monitor and the Presenter Console
> on the other, but after cycling through F5-esc-F5-esc, as well as going
> forward/back through some slides, no segfault was seen.
> 
> Status -> RESOLVED WORKSFORME

Reopening with a backtrace attached, there's no hurry in closing bugs, especially crashers please.
Comment 6 Commit Notification 2014-09-11 14:15:55 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fee95be5b637dbfbdbe78426c02240b1dc90e1f2

Resolves: fdo#82552 we only check pAlphaW on one branch



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2014-09-11 14:19:42 UTC
I can't reproduce it, but based on the NULL in the bt and the fact that the *other* branch checks for null, the above commit should make it not crash.
Comment 8 Riccardo Magliocchetti 2014-09-12 08:16:58 UTC
(In reply to comment #7)
> I can't reproduce it, but based on the NULL in the bt and the fact that the
> *other* branch checks for null, the above commit should make it not crash.

Thanks for looking at this, I'll try to reproduce when daily builds for master are installable again, see #82288
Comment 9 Commit Notification 2014-09-12 08:51:15 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fe8b83f06fdc93ac06f4035c3ea50c51d0e3d026&h=libreoffice-4-3

Resolves: fdo#82552 we only check pAlphaW on one branch


It will be available in LibreOffice 4.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.