Resolves: fdo#82552 we only check pAlphaW on one branch

Change-Id: Ib2c5a0d751050af77f267edbb7a5a0fe57494622
(cherry picked from commit fee95be5b637dbfbdbe78426c02240b1dc90e1f2)
Reviewed-on: https://gerrit.libreoffice.org/11404
Reviewed-by: Thomas Arnhold <thomas@arnhold.org>
Tested-by: Thomas Arnhold <thomas@arnhold.org>